[SCRUM-8] cherrypick : 마지막 피드백 체리픽 (#4)
* refactor : 메서드명 수정(객체 기준으로 행위를 생각하기)

* refactor : 일급 객체 생성 및 dto 변환 로직 추가

* refactor : 예약이 안된 예약 시간 조회 관련 단 건 쿼리를 다 건 쿼리로 분리

* feat : equals & hashcode 오버라이드 메서드 추가